# chart-sdl-engine

./: README.md  iterations.md  pyproject.toml  test.py
examples/: create-dynamic-lines.py  simple-drawing.py
src/chart_sdl_engine/: __init__.py
src/chart_sdl_engine/Components/: Base.py  Mouse.py  Position.py  Render.py  Shape.py  __init__.py
src/chart_sdl_engine/Managers/: Entity.py  Scene.py  World.py  __init__.py
src/chart_sdl_engine/Systems/: Base.py  Events.py  Mouse.py  Render.py  __init__.py
src/trading_chart_sdl/: Components.py  Manager.py  Systems.py  __init__.py
src/trading_chart_sdl/Components/: Mouse.py  Position.py  Render.py  Shape.py  __init__.py
src/trading_chart_sdl/Managers/: Entity.py  Scene.py  World.py  __init__.py
src/trading_chart_sdl/Systems/: Base.py  Events.py  Mouse.py  Render.py  __init__.py
tests/: camera_test.py
